--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,10 @@ nav:
   - Visualizations: visualizations.md
   - Related Work: related-work.md
   - Our Inspiration: projects-we-love.md
+markdown_extensions:
+  - attr_list
+plugins:
+  - mkdocs-pdf
 theme:
   name: material
   palette:
